@@ -9,16 +9,36 @@ package io.camunda.security.auth;
 
 import static java.util.Collections.unmodifiableList;
 
+import com.fasterxml.jackson.annotation.JsonAutoDetect;
+import com.fasterxml.jackson.annotation.JsonCreator;
+import com.fasterxml.jackson.annotation.JsonProperty;
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.function.Function;
 
-public record Authentication(
-    Long authenticatedUserKey,
-    List<Long> authenticatedGroupKeys,
-    List<Long> authenticatedRoleKeys,
-    List<String> authenticatedTenantIds,
-    String token) {
+@JsonAutoDetect(fieldVisibility = JsonAutoDetect.Visibility.ANY)
+public final class Authentication {
+  private final Long authenticatedUserKey;
+  private final List<Long> authenticatedGroupKeys;
+  private final List<Long> authenticatedRoleKeys;
+  private final List<String> authenticatedTenantIds;
+  private final String token;
+
+  @JsonCreator(mode = JsonCreator.Mode.PROPERTIES)
+  public Authentication(
+      final @JsonProperty("authenticated_user_key") Long authenticatedUserKey,
+      final @JsonProperty("authenticated_group_keys") List<Long> authenticatedGroupKeys,
+      final @JsonProperty("authenticated_role_keys") List<Long> authenticatedRoleKeys,
+      final @JsonProperty("authenticated_tenant_ids") List<String> authenticatedTenantIds,
+      final @JsonProperty("token") String token) {
+    this.authenticatedUserKey = authenticatedUserKey;
+    this.authenticatedGroupKeys = authenticatedGroupKeys;
+    this.authenticatedRoleKeys = authenticatedRoleKeys;
+    this.authenticatedTenantIds = authenticatedTenantIds;
+    this.token = token;
+  }
 
   public static Authentication none() {
     return new Builder().build();
@@ -26,6 +46,72 @@ public record Authentication(
 
   public static Authentication of(final Function<Builder, Builder> builderFunction) {
     return builderFunction.apply(new Builder()).build();
+  }
+
+  public Long authenticatedUserKey() {
+    return authenticatedUserKey;
+  }
+
+  public List<Long> authenticatedGroupKeys() {
+    return authenticatedGroupKeys;
+  }
+
+  public List<Long> authenticatedRoleKeys() {
+    return authenticatedRoleKeys;
+  }
+
+  public List<String> authenticatedTenantIds() {
+    return authenticatedTenantIds;
+  }
+
+  public String token() {
+    return token;
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(
+        authenticatedUserKey,
+        authenticatedGroupKeys,
+        authenticatedRoleKeys,
+        authenticatedTenantIds,
+        token);
+  }
+
+  @Override
+  public boolean equals(final Object obj) {
+    if (obj == this) {
+      return true;
+    }
+    if (obj == null || obj.getClass() != getClass()) {
+      return false;
+    }
+    final Authentication that = (Authentication) obj;
+    return Objects.equals(authenticatedUserKey, that.authenticatedUserKey)
+        && Objects.equals(authenticatedGroupKeys, that.authenticatedGroupKeys)
+        && Objects.equals(authenticatedRoleKeys, that.authenticatedRoleKeys)
+        && Objects.equals(authenticatedTenantIds, that.authenticatedTenantIds)
+        && Objects.equals(token, that.token);
+  }
+
+  @Override
+  public String toString() {
+    return "Authentication["
+        + "authenticatedUserKey="
+        + authenticatedUserKey
+        + ", "
+        + "authenticatedGroupKeys="
+        + authenticatedGroupKeys
+        + ", "
+        + "authenticatedRoleKeys="
+        + authenticatedRoleKeys
+        + ", "
+        + "authenticatedTenantIds="
+        + authenticatedTenantIds
+        + ", "
+        + "token="
+        + token
+        + ']';
   }
 
   public static final class Builder {
@@ -42,7 +128,7 @@ public record Authentication(
     }
 
     public Builder group(final Long value) {
-      return groupKeys(List.of(value));
+      return groupKeys(Collections.singletonList(value));
     }
 
     public Builder groupKeys(final List<Long> values) {
@@ -53,7 +139,7 @@ public record Authentication(
     }
 
     public Builder role(final Long value) {
-      return roleKeys(java.util.List.of(value));
+      return roleKeys(Collections.singletonList(value));
     }
 
     public Builder roleKeys(final List<Long> values) {
@@ -64,7 +150,7 @@ public record Authentication(
     }
 
     public Builder tenant(final String tenant) {
-      return tenants(List.of(tenant));
+      return tenants(Collections.singletonList(tenant));
     }
 
     public Builder tenants(final List<String> values) {
